--- a/openmp_tp.ipynb
+++ b/openmp_tp.ipynb
@@ -11,15 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!g++ -o tp_openmp_part_1_pi_sequential ./Part_1/tp_openmp_part_1_pi_sequential.cpp -fopenmp -O3 -march=native\n",
-    "!g++ -o tp_openmp_part_1_pi_impl_reduce ./Part_1/tp_openmp_part_1_pi_impl_reduce.cpp -fopenmp -O3 -march=native\n",
-    "!g++ -o tp_openmp_part_1_pi_impl_atomic ./Part_1/tp_openmp_part_1_pi_impl_atomic.cpp -fopenmp -O3 -march=native\n",
-    "!g++ -o tp_openmp_part_1_pi_impl_critical ./Part_1/tp_openmp_part_1_pi_impl_critical.cpp -fopenmp -O3 -march=native\n",
-    "!g++ -o tp_openmp_part_1_pi_impl_split_array ./Part_1/tp_openmp_part_1_pi_impl_split_array.cpp -fopenmp -O3 -march=native"
+    "!g++ -o ./exe_bin/tp_openmp_part_1_pi_sequential ./Part_1/tp_openmp_part_1_pi_sequential.cpp -fopenmp -O3 -march=native\n",
+    "!g++ -o ./exe_bin/tp_openmp_part_1_pi_impl_reduce ./Part_1/tp_openmp_part_1_pi_impl_reduce.cpp -fopenmp -O3 -march=native\n",
+    "!g++ -o ./exe_bin/tp_openmp_part_1_pi_impl_atomic ./Part_1/tp_openmp_part_1_pi_impl_atomic.cpp -fopenmp -O3 -march=native\n",
+    "!g++ -o ./exe_bin/tp_openmp_part_1_pi_impl_critical ./Part_1/tp_openmp_part_1_pi_impl_critical.cpp -fopenmp -O3 -march=native\n",
+    "!g++ -o ./exe_bin/tp_openmp_part_1_pi_impl_split_array ./Part_1/tp_openmp_part_1_pi_impl_split_array.cpp -fopenmp -O3 -march=native"
    ]
   },
   {
